--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,4 +1,5 @@
 main {
+  position: relative;
   padding: 2rem;
   border-radius: 3rem;
   @include shadows;
@@ -17,6 +18,17 @@ main {
     text-shadow: -1px -1px 2px #fff,
       2px 2px 2px rgba($color: #000000, $alpha: 0.35);
   }
+}
+
+.display {
+  position: absolute;
+  opacity: 0.5;
+  z-index: 2;
+  right: 11%;
+  top: 5%;
+  font-size: 1.5rem;
+  color: black;
+  background: none;
 }
 
 input::-webkit-inner-spin-button,
@@ -44,16 +56,20 @@ button {
   border: none;
   border-radius: 3rem;
   cursor: pointer;
+  transition: 0.2s ease;
   &:hover,
   &:active {
     background-color: rgb(220, 216, 216);
+    transform: translateY(1.2px);
   }
   &:active {
     @include shadows-ins;
   }
 }
-.op_key,
-.eq_key {
+.op_key {
   color: $rasp;
   font-weight: 500;
+}
+.eq_key {
+  color: $brungreen;
 }
