--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 main {
+  position: relative;
   padding: 2rem;
   border-radius: 3rem;
   box-shadow: -6px -6px 9px #fff, 6px 6px 9px rgba(0, 0, 0, 0.35);
@@ -39,6 +40,17 @@ main input {
   border: none;
   border-radius: 2.8rem;
   text-shadow: -1px -1px 2px #fff, 2px 2px 2px rgba(0, 0, 0, 0.35);
+}
+
+.display {
+  position: absolute;
+  opacity: 0.5;
+  z-index: 2;
+  right: 11%;
+  top: 5%;
+  font-size: 1.5rem;
+  color: black;
+  background: none;
 }
 
 input::-webkit-inner-spin-button,
@@ -67,19 +79,44 @@ button {
   border: none;
   border-radius: 3rem;
   cursor: pointer;
+  transition: 0.2s ease;
 }
 
 button:hover, button:active {
   background-color: #dcd8d8;
+  transform: translateY(1.2px);
 }
 
 button:active {
   box-shadow: inset -6px -6px 9px #fff, inset 6px 6px 9px rgba(0, 0, 0, 0.35);
 }
 
-.op_key,
-.eq_key {
+.op_key {
   color: #720026;
   font-weight: 500;
+}
+
+.eq_key {
+  color: #1b4332;
+}
+
+@media screen and (max-width: 480px) {
+  main {
+    padding: 1.2rem;
+    min-height: 90vh;
+    min-width: 95vw;
+  }
+  main input {
+    height: 8rem;
+  }
+  .key {
+    gap: 2.3rem;
+    margin: 3rem auto;
+  }
+  .display {
+    top: 4%;
+    left: 88%;
+    font-size: 1.5rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
