--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ button:active {
   font-weight: bold;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 350px) and (max-width: 410px) {
   main {
     padding: 1.2rem;
     min-height: 75vh;
@@ -119,6 +119,30 @@ button:active {
   .display {
     top: 4%;
     font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 349px) {
+  main {
+    padding: 0;
+    min-width: 95vw;
+    min-height: 90vh;
+  }
+  main input {
+    width: 100%;
+    margin-top: 0.3rem;
+    font-size: 1.75rem;
+  }
+  .key {
+    margin: 5%;
+    column-gap: 0.75rem;
+    grid-gap: 1rem;
+    margin-top: 1.5rem;
+  }
+  .key button {
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.6rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
